tests/baselines/reference/asyncMethod12.errors.txt
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod12.ts(9,13): error TS1110: Type expected.
tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod12.ts(9,18): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncMethod/asyncMethod12.ts (2 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var o = {
      async foo(): Promise<void> {
         // Legal to use 'await' in a type context.
         var v: await;
                ~~~~~
!!! error TS1110: Type expected.
                     ~
!!! error TS1109: Expression expected.
      }
    }